# metaling

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README  common.c  common.cc  common.h  common.hpp  impl_pmkid.py  main.cc  math.metal  metal.h  metal.hpp  metal.mm
src/: common.cc  common.hpp  hash.cc  hash.hpp  hash.metal  main.cc  math.metal  metal.cc  metal.hpp  sha1.cc  sha1.hpp  sha1.metal  tests.cc
src/backend/cpu/: cpu.cc  cpu.hpp  hash.cc  hash.hpp
src/backend/metal/: hash.cc  hash.hpp  metal.cc  metal.hpp
src/backend/metal/kernels/: common.hpp  hash.metal  sha1.metal  sha1_simple.metal
